--- a/client/src/app/layout/dashboard/components/chat/chat.component.html
+++ b/client/src/app/layout/dashboard/components/chat/chat.component.html
@@ -7,14 +7,17 @@
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
-                <li role="menuitem"><a class="dropdown-item" href="#">
-                    <i class="fa fa-refresh fa-fw"></i> Actualizar</a>
+                <li role="menuitem">
+                    <a class="dropdown-item" href="#">
+                        <i class="fa fa-refresh fa-fw"></i> Actualizar</a>
                 </li>
-                <li role="menuitem"><a class="dropdown-item" href="#">
-                    <i class="fa fa-check-circle fa-fw"></i> Disponible</a>
+                <li role="menuitem">
+                    <a class="dropdown-item" href="#">
+                        <i class="fa fa-check-circle fa-fw"></i> Disponible</a>
                 </li>
-                <li role="menuitem"><a class="dropdown-item" href="#">
-                    <i class="fa fa-times fa-fw"></i> Ocupado</a>
+                <li role="menuitem">
+                    <a class="dropdown-item" href="#">
+                        <i class="fa fa-times fa-fw"></i> Ocupado</a>
                 </li>
                 <li class="divider dropdown-divider"></li>
                 <li role="menuitem">
@@ -29,9 +32,9 @@
                 </li>
                 <li class="divider"></li>
                 <li>
-                  <a href="#" class="dropdown-item">
-                    <i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión
-                  </a>
+                    <a href="#" class="dropdown-item">
+                        <i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión
+                    </a>
                 </li>
             </ul>
         </div>
@@ -51,25 +54,25 @@
                         </small>
                     </div>
                     <p>
-                    El Instituto YAVIRAC es uno de los mejores institutos a nivel Nacional en el Ecuador.
+                        El Instituto YAVIRAC es uno de los mejores institutos a nivel Nacional en el Ecuador.
                     </p>
                 </div>
             </li>
             <li class="right clearfix">
-                <span class="chat-img pull-right">
-                    <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar" class="img-circle">
-                </span>
-                <div class="chat-body clearfix">
-                    <div class="header">
-                        <small class=" text-muted">
-                            <i class="fa fa-clock-o fa-fw"></i> Hace 13 minutos
-                        </small>
-                        <strong class="pull-right primary-font">Alejandro Coronel</strong>
-                    </div>
-                    <p>
-                    Instituto es muy grande y posee muchas especialidades
-                   </p>
-                </div>
+                    <span class="chat-img pull-left">
+                            <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle">
+                        </span>
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">Alejandro Coronel</strong>
+                                <small class="pull-right text-muted">
+                                    <i class="fa fa-clock-o fa-fw"></i> Hace 5 minutos
+                                </small>
+                            </div>
+                            <p>
+                                El Instituto YAVIRAC es uno de los mejores institutos a nivel Nacional en el Ecuador.
+                            </p>
+                        </div>
             </li>
             <li class="left clearfix">
                 <span class="chat-img pull-left">
@@ -83,7 +86,7 @@
                         </small>
                     </div>
                     <p>
-                    El Instituto posee una alta gama de profesores especializados
+                        El Instituto posee una alta gama de profesores especializados
                     </p>
                 </div>
             </li>
@@ -99,8 +102,8 @@
                         <strong class="pull-right primary-font">Carlos Veloz</strong>
                     </div>
                     <p>
-                    Tiene muy buena vista hacia el Panecillo
-                </p>
+                        Tiene muy buena vista hacia el Panecillo
+                    </p>
                 </div>
             </li>
         </ul>
