--- a/client/src/app/layout/dashboard/components/chat/chat.component.html
+++ b/client/src/app/layout/dashboard/components/chat/chat.component.html
@@ -60,17 +60,17 @@
                     <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar" class="img-circle">
                 </span>
                 <div class="chat-body clearfix">
-                    <div class="header">
-                        <small class=" text-muted">
-                            <i class="fa fa-clock-o fa-fw"></i> Hace 13 minutos
-                        </small>
-                        <strong class="pull-right primary-font">Alejandro Coronel</strong>
+                        <div class="header">
+                            <strong class="primary-font">Alejandro Coronel</strong>
+                            <small class="pull-right text-muted">
+                                <i class="fa fa-clock-o fa-fw"></i> Hace 10 minutos
+                            </small>
+                        </div>
+                        <p>
+                        El Instituto tiene una mejor vista del panecillo.
+                        </p>
                     </div>
-                    <p>
-                    Instituto es muy grande y posee muchas especialidades
-                   </p>
-                </div>
-            </li>
+                </li>
             <li class="left clearfix">
                 <span class="chat-img pull-left">
                     <img src="http://placehold.it/50/55C1E7/fff" alt="User Avatar" class="img-circle">
@@ -92,15 +92,15 @@
                     <img src="http://placehold.it/50/FA6F57/fff" alt="User Avatar" class="img-circle">
                 </span>
                 <div class="chat-body clearfix">
-                    <div class="header">
-                        <small class=" text-muted">
-                            <i class="fa fa-clock-o fa-fw"></i> Hace 15 minutos
-                        </small>
-                        <strong class="pull-right primary-font">Carlos Veloz</strong>
-                    </div>
-                    <p>
-                    Tiene muy buena vista hacia el Panecillo
-                </p>
+                        <div class="header">
+                            <strong class="primary-font">Carlos Veloz</strong>
+                            <small class="pull-right text-muted">
+                                <i class="fa fa-clock-o fa-fw"></i> Hace 15 minutos
+                            </small>
+                        </div>
+                        <p>
+                        El Instituto tiene muchas especialidades que ofrecer.
+                        </p>
                 </div>
             </li>
         </ul>
