--- a/client/src/app/layout/dashboard/components/chat/chat.component.html
+++ b/client/src/app/layout/dashboard/components/chat/chat.component.html
@@ -62,10 +62,12 @@
                 <div class="chat-body clearfix">
                         <div class="header">
                             <strong class="primary-font">Alejandro Coronel</strong>
-                            <small class="pull-right text-muted">
+                            <br>
+                            <small class="pull-left text-muted">
                                 <i class="fa fa-clock-o fa-fw"></i> Hace 10 minutos
                             </small>
                         </div>
+                        <br>
                         <p>
                         El Instituto tiene una mejor vista del panecillo.
                         </p>
@@ -78,10 +80,13 @@
                 <div class="chat-body clearfix">
                     <div class="header">
                         <strong class="primary-font">Bryan Cortez</strong>
-                        <small class="pull-right text-muted">
+                        <br>
+                        <small class="pull-left text-muted">
+
                             <i class="fa fa-clock-o fa-fw"></i> Hace 14 minutos
                         </small>
                     </div>
+                    <br>
                     <p>
                     El Instituto posee una alta gama de profesores especializados
                     </p>
@@ -94,10 +99,12 @@
                 <div class="chat-body clearfix">
                         <div class="header">
                             <strong class="primary-font">Carlos Veloz</strong>
-                            <small class="pull-right text-muted">
+                            <br>
+                            <small class="pull-left text-muted">
                                 <i class="fa fa-clock-o fa-fw"></i> Hace 15 minutos
                             </small>
                         </div>
+                        <br>
                         <p>
                         El Instituto tiene muchas especialidades que ofrecer.
                         </p>
