--- a/client/src/app/CRUD/pagina/pagina.component.html
+++ b/client/src/app/CRUD/pagina/pagina.component.html
@@ -1,7 +1,7 @@
 <div class="container">
    <div class="row">
       <div class="col-md-12 text-right">
-         <h2 style="margin-top:0px">Catálogo de Pagina</h2>
+         <h2 style="margin-top:0px">Catálogo de Página</h2>
       </div>
    </div>
    <div class="row">
@@ -37,6 +37,11 @@
                      </span>
                   </th>
                   <th scope="col">
+                    <span>
+                       <strong>Descripción</strong>
+                    </span>
+                  </th>
+                  <th scope="col">
                      <span>
                         <strong>Slider</strong>
                      </span>
@@ -61,6 +66,7 @@
                         <strong>Menú</strong>
                      </span>
                   </th>
+
                </tr>
             </thead>
             <tbody>
@@ -69,6 +75,7 @@
                      <i class="fa fa-hand-o-right" [hidden]="!estaSeleccionado(actual)"></i>
                   </td>
                   <td>{{actual.id}}</td>
+                  <td>{{actual.descripcion}}</td>
                   <td>{{actual.slider}}</td>
                   <td>{{actual.esPrincipal}}</td>
                   <td>{{actual.texto}}</td>
@@ -149,6 +156,12 @@
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="Menú" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
+        </div>
+        <div class="form-group row">
+            <label for="descripcion" class="col-sm-4 col-form-label">Descripción</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="Descripción" [(ngModel)]="entidadSeleccionada.descripcion">
+        </div>
          </div>
          </form>
       </div>
