Modificación de Selección

--- a/client/src/app/CRUD/comentario/comentario.component.html
+++ b/client/src/app/CRUD/comentario/comentario.component.html
@@ -117,13 +117,19 @@
          <div class="form-group row">
             <label for="idUsuario" class="col-sm-4 col-form-label">Usuario</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idUsuario" name="idUsuario" placeholder="Usuario" [(ngModel)]="entidadSeleccionada.idUsuario">
+              <select class="form-control" id="idUsuario" name="idUsuario" [(ngModel)]="entidadSeleccionada.idUsuario">
+                <option value="" selected>Seleccione...</option>
+                <option *ngFor="let usuario of usuarios" value={{usuario.id}}>{{usuario.nombreCompleto}}</option>
+              </select>
             </div>
          </div>
          <div class="form-group row">
             <label for="idNoticia" class="col-sm-4 col-form-label">Noticia</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idNoticia" name="idNoticia" placeholder="Noticia" [(ngModel)]="entidadSeleccionada.idNoticia">
+              <select class="form-control" id="idNoticia" name="idNoticia" [(ngModel)]="entidadSeleccionada.idNoticia">
+                <option value="" selected>Seleccione...</option>
+                <option *ngFor="let noticia of noticias" value={{noticia.id}}>{{noticia.descripcion}}</option>
+              </select>
             </div>
          </div>
          </form>
