--- a/client/src/app/CRUD/item/item.component.html
+++ b/client/src/app/CRUD/item/item.component.html
@@ -129,13 +129,19 @@
          <div class="form-group row">
             <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="Menú" [(ngModel)]="entidadSeleccionada.idMenu">
+              <select class="form-control" id="idMenu" name="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
+                <option value="" selected>Seleccione...</option>
+                <option *ngFor="let menu of menus" value={{menu.id}}>{{menu.descripcion}}</option>
+              </select>
             </div>
          </div>
          <div class="form-group row">
             <label for="idPagina" class="col-sm-4 col-form-label">Página</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="Página" [(ngModel)]="entidadSeleccionada.idPagina">
+              <select class="form-control" id="idPagina" name="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
+                <option value="" selected>Seleccione...</option>
+                <option *ngFor="let pagina of paginas" value={{pagina.id}}>{{pagina.nombreArchivo}}</option>
+              </select>
             </div>
          </div>
          </form>
