--- a/client/src/app/CRUD/pagina/pagina.component.html
+++ b/client/src/app/CRUD/pagina/pagina.component.html
@@ -1,179 +1,187 @@
 <div class="container">
-   <div class="row">
-      <div class="col-md-12 text-right">
-         <h2 style="margin-top:0px">Catálogo de Página</h2>
+  <div class="row">
+    <div class="col-md-12 text-right">
+      <h2 style="margin-top:0px">Catálogo de Página</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="btn-toolbar">
+        <div>
+          <button type="button" class="btn btn-default" (click)="refresh()">
+            <span class="fa fa-refresh"></span>&nbsp;Leer
+          </button>
+          <button type="button" class="btn btn-success" (click)="open(content,false)" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
+            <span class="fa fa-edit"></span>&nbsp;Editar
+          </button>
+          <button type="button" class="btn btn-info" (click)="open(content,true)">
+            <span class="fa fa-plus"></span>&nbsp;Nuevo
+          </button>
+          <button type="button" class="btn btn-danger" (click)="delete(entidadSeleccionada); $event.stopPropagation();" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
+            <span class="fa fa-remove"></span>&nbsp;Borrar
+          </button>
+        </div>
       </div>
-   </div>
-   <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-         <div class="btn-toolbar">
-            <div>
-               <button type="button" class="btn btn-default" (click)="refresh()">
-                  <span class="fa fa-refresh"></span>&nbsp;Leer
-               </button>
-               <button type="button" class="btn btn-success" (click)="open(content,false)" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
-                  <span class="fa fa-edit"></span>&nbsp;Editar
-               </button>
-               <button type="button" class="btn btn-info" (click)="open(content,true)">
-                  <span class="fa fa-plus"></span>&nbsp;Nuevo
-               </button>
-               <button type="button" class="btn btn-danger" (click)="delete(entidadSeleccionada); $event.stopPropagation();" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
-                  <span class="fa fa-remove"></span>&nbsp;Borrar
-               </button>
-            </div>
-         </div>
-      </div>
-   </div>
-   <div class="row" style="margin-top:15px">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-         <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-               <tr>
-                  <th>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Identificador</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                    <span>
-                       <strong>Descripción</strong>
-                    </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Slider</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Es Principal ?</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Texto</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Imagen</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Menú</strong>
-                     </span>
-                  </th>
+    </div>
+  </div>
+  <div class="row" style="margin-top:15px">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Identificador</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Descripción</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Slider</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Es Principal ?</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Texto</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Imagen</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Menú</strong>
+              </span>
+            </th>
 
-               </tr>
-            </thead>
-            <tbody>
-               <tr *ngFor="let actual of entidades" (click)="onSelect(actual)">
-                  <td>
-                     <i class="fa fa-hand-o-right" [hidden]="!estaSeleccionado(actual)"></i>
-                  </td>
-                  <td>{{actual.id}}</td>
-                  <td>{{actual.descripcion}}</td>
-                  <td>{{actual.slider}}</td>
-                  <td>{{actual.esPrincipal}}</td>
-                  <td>{{actual.texto}}</td>
-                  <td>{{actual.idFoto}}</td>
-                  <td>{{actual.idMenu}}</td>
-               </tr>
-            </tbody>
-         </table>
-         <div class="col-md-12">
-            <div class="btn-toolbar">
-               <div>
-                  <button type="button" class="btn btn-default" (click)="getPaginaPrimera()">
-                     <span class="fa fa-fast-backward"></span>
-                  </button>
-                  <button type="button" class="btn btn-default" (click)="getPaginaAnterior()">
-                     <span class="fa fa-step-backward"></span>
-                  </button>
-                  <span><strong style="margin:10px;">Página</strong><strong id="paginaActual">{{paginaActual}}</strong><strong style="margin:10px;">de</strong><strong id="paginaUltima" style="margin-right:10px;">{{paginaUltima}}</strong></span>
-                  <button type="button" class="btn btn-default" (click)="getPaginaSiguiente()">
-                     <span class="fa fa-step-forward"></span>
-                  </button>
-                  <button type="button" class="btn btn-default" (click)="getPaginaUltima()">
-                     <span class="fa fa-fast-forward"></span>
-                  </button>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <ng-template #content let-c="close" let-d="dismiss">
-      <div class="modal-header">
-         <h4 class="modal-title">
-            <span *ngIf="entidadSeleccionada.id != 0">
-               Edición de Datos: {{entidadSeleccionada.descripcion | uppercase}}
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let actual of entidades" (click)="onSelect(actual)">
+            <td>
+              <i class="fa fa-hand-o-right" [hidden]="!estaSeleccionado(actual)"></i>
+            </td>
+            <td>{{actual.id}}</td>
+            <td>{{actual.descripcion}}</td>
+            <td>{{actual.slider}}</td>
+            <td>{{actual.esPrincipal}}</td>
+            <td>{{actual.texto}}</td>
+            <td>{{actual.idFoto}}</td>
+            <td>{{actual.idMenu}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="col-md-12">
+        <div class="btn-toolbar">
+          <div>
+            <button type="button" class="btn btn-default" (click)="getPaginaPrimera()">
+              <span class="fa fa-fast-backward"></span>
+            </button>
+            <button type="button" class="btn btn-default" (click)="getPaginaAnterior()">
+              <span class="fa fa-step-backward"></span>
+            </button>
+            <span>
+              <strong style="margin:10px;">Página</strong>
+              <strong id="paginaActual">{{paginaActual}}</strong>
+              <strong style="margin:10px;">de</strong>
+              <strong id="paginaUltima" style="margin-right:10px;">{{paginaUltima}}</strong>
             </span>
-            <span *ngIf="entidadSeleccionada.id === 0">
-               Ingreso de Datos:
-            </span>
-         </h4>
-         <button type="button" class="close" aria-label="Close" (click)="d('ClickEnX')">
-            <span aria-hidden="true">&times;</span>
-         </button>
+            <button type="button" class="btn btn-default" (click)="getPaginaSiguiente()">
+              <span class="fa fa-step-forward"></span>
+            </button>
+            <button type="button" class="btn btn-default" (click)="getPaginaUltima()">
+              <span class="fa fa-fast-forward"></span>
+            </button>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">
-         <form>
-         <div class="form-group row">
-            <label for="id" class="col-sm-4 col-form-label">Identificador</label>
-            <div class="col-sm-8">
-              <input type="text" readonly class="form-control" id="id" name="id" [(ngModel)]="entidadSeleccionada.id">
-            </div>
-         </div>
-         <div class="form-group row">
-            <label for="slider" class="col-sm-4 col-form-label">Slider</label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="slider" name="slider" placeholder="Slider" [(ngModel)]="entidadSeleccionada.slider">
-            </div>
-         </div>
-         <div class="form-group row">
-            <label for="esPrincipal" class="col-sm-4 col-form-label">Es Principal ?</label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="esPrincipal" name="esPrincipal" placeholder="Es Principal ?" [(ngModel)]="entidadSeleccionada.esPrincipal">
-            </div>
-         </div>
-         <div class="form-group row">
-            <label for="texto" class="col-sm-4 col-form-label">Texto</label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="texto" name="texto" placeholder="Texto" [(ngModel)]="entidadSeleccionada.texto">
-            </div>
-         </div>
-         <div class="form-group row">
-            <label for="idFoto" class="col-sm-4 col-form-label">Imagen</label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="Imagen" [(ngModel)]="entidadSeleccionada.idFoto">
-            </div>
-         </div>
-         <div class="form-group row">
-            <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
-            <div class="col-sm-8">
-                <select class="form-control" id="idMenu" name="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
-                <option value="" selected>Seleccione...</option>
-                <option *ngFor="let menu of menus" value={{menu.id}}>{{menu.descripcion}}</option>
-              </select>
-
-            </div>
+    </div>
+  </div>
+  <ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h4 class="modal-title">
+        <span *ngIf="entidadSeleccionada.id != 0">
+          Edición de Datos: {{entidadSeleccionada.descripcion | uppercase}}
+        </span>
+        <span *ngIf="entidadSeleccionada.id === 0">
+          Ingreso de Datos:
+        </span>
+      </h4>
+      <button type="button" class="close" aria-label="Close" (click)="d('ClickEnX')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group row">
+          <label for="id" class="col-sm-4 col-form-label">Identificador</label>
+          <div class="col-sm-8">
+            <input type="text" readonly class="form-control" id="id" name="id" [(ngModel)]="entidadSeleccionada.id">
+          </div>
         </div>
         <div class="form-group row">
-            <label for="descripcion" class="col-sm-4 col-form-label">Descripción</label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="Descripción" [(ngModel)]="entidadSeleccionada.descripcion">
+          <label for="slider" class="col-sm-4 col-form-label">Slider</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="slider" name="slider" placeholder="Slider" [(ngModel)]="entidadSeleccionada.slider">
+          </div>
         </div>
-         </div>
-         </form>
-      </div>
-      <div class="modal-footer">
-         <button type="button" class="btn btn-primary col-offset-sm-4" (click)="c('save')">
-            <span class="fa fa-save"></span>&nbsp;Guardar
-         </button>
-         <button type="button" class="btn btn-default" (click)="c('close')">Cerrar</button>
-      </div>
-   </ng-template>
+        <div class="form-group row">
+          <label for="esPrincipal" class="col-sm-4 col-form-label">Es Principal ?</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="esPrincipal" name="esPrincipal" placeholder="Es Principal ?" [(ngModel)]="entidadSeleccionada.esPrincipal">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="texto" class="col-sm-4 col-form-label">Texto</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="texto" name="texto" placeholder="Texto" [(ngModel)]="entidadSeleccionada.texto">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="idFoto" class="col-sm-4 col-form-label">Imagen</label>
+          <div class="col-sm-8">
+            <select class="form-control" id="idFoto" name="idFoto" [(ngModel)]="entidadSeleccionada.idFoto">
+              <option value="" selected>Seleccione...</option>
+              <option *ngFor="let foto of fotos" value={{foto.id}}>{{foto.nombreArchivo}}</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
+          <div class="col-sm-8">
+            <select class="form-control" id="idMenu" name="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
+              <option value="" selected>Seleccione...</option>
+              <option *ngFor="let menu of menus" value={{menu.id}}>{{menu.descripcion}}</option>
+            </select>
+
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="descripcion" class="col-sm-4 col-form-label">Descripción</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="Descripción" [(ngModel)]="entidadSeleccionada.descripcion">
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-primary col-offset-sm-4" (click)="c('save')">
+        <span class="fa fa-save"></span>&nbsp;Guardar
+      </button>
+      <button type="button" class="btn btn-default" (click)="c('close')">Cerrar</button>
+    </div>
+  </ng-template>
 </div>
