--- a/client/src/app/layout/dashboard/components/timeline/timeline.component.html
+++ b/client/src/app/layout/dashboard/components/timeline/timeline.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="timeline-body">
                     <p>Aqui va un poco de informacion</p>
-                    <a href="">Este link lleva a Vinculacion</a>
+                    <a href="./vinculacion">Este link lleva a Vinculacion</a>
                 </div>
             </div>
         </li>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="timeline-body">
                     <p>Aqui va un poco de informacion</p>
-                    <a href="">Este link lleva a Investigacion</a>
+                    <a href="./investigacion">Este link lleva a Investigacion</a>
                 </div>
             </div>
         </li>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="timeline-body">
                     <p>Aqui va un poco de informacion</p>
-                    <a href="">Este link lleva a Bolsa de Empleo</a>
+                    <a href="./bolsa-empleo">Este link lleva a Bolsa de Empleo</a>
                 </div>
             </div>
         </li>
