Icono de Imagen

--- a/client/src/app/layout/components/sidebar/sidebar.component.html
+++ b/client/src/app/layout/components/sidebar/sidebar.component.html
@@ -59,7 +59,7 @@
                     </li>
                     <li>
                         <a [routerLink]="['/imagen']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-file-image-os"></i>&nbsp;{{ 'Imagen' | translate }}
+                            <i class="fa fa-file-image-o"></i>&nbsp;{{ 'Imagen' | translate }}
                         </a>
                     </li>
 
@@ -75,7 +75,7 @@
                     </li>
                     <li>
                         <a [routerLink]="['/item']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-bookmark-o"></i>&nbsp;{{ 'Item' | translate }}
+                            <i class="fa fa-bookmark-o"></i>&nbsp;{{ 'Items' | translate }}
                         </a>
                     </li>
                 </ul>
