--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -41,7 +41,7 @@
     <hr>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'dark'" [icon]="'fa fa-cogs'" [count]="12" [label]="'Analisis y Diseño de Sistemas'"></app-stat>
+            <app-stat [bgClass]="'dark'" [icon]="'fa fa-cogs'" [count]="12" [label]="'Analisis de Sistemas'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'info'" [icon]="'fa fa-cutlery'" [count]="12" [label]="'Arte y Culinario'"></app-stat>
