--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -41,7 +41,8 @@
     <hr>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'dark'" [icon]="'fa fa-cogs'" [count]="12" [label]="'Analisis de Sistemas'"></app-stat>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-cogs'" [label]="'Análisis de sistemas'"></app-stat>
+            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/analisis">Ver Carrera</a>
         </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-cutlery'" [label]="'Arte y Culinario'"></app-stat>
