--- a/client/src/app/layout/noticias/noticias.component.html
+++ b/client/src/app/layout/noticias/noticias.component.html
@@ -4,7 +4,7 @@
             <br/>
             <div class="col-12">
                 <div class="alert alert-white border-dark" role="alert" align="center">
-                    <H1>GUIANZA TURÍSTICA</H1>
+                    <H1>NOTICIAS</H1>
                 </div>
             </div>
         </div>
@@ -22,8 +22,8 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="col-12 alert alert-secondary bg-light border-dark">
-                            <h4>OBJETIVOS</h4>
-                            <p>CONTENIDO</p>
+                            <h4>NOTICIA DESTACADA</h4>
+                            <p>LINK</p>
                         </div>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                         <div class="card alert alert-secondary bg-light border-dark">
                             <img class="card-img-top" src="..." alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">CONTENIDO</h5>
+                                <h5 class="card-title">NOTICIA DE CARRERA</h5>
                                 <p class="card-text"></p>
                             </div>
                             <div class="card-footer alert alert-secondary bg-light">
@@ -46,7 +46,7 @@
                         <div class="card alert alert-secondary bg-light border-dark">
                             <img class="card-img-top" src="..." alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">NOTICIA DE CARRERA</h5>
                             </div>
                             <div class="card-footer alert alert-secondary bg-light">
                                 <small class="text-muted">Last updated 3 mins ago</small>
@@ -55,7 +55,7 @@
                         <div class="card alert alert-secondary bg-light border-dark">
                             <img class="card-img-top" src="..." alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">NOTICIA DE CARRERA</h5>
                             </div>
                             <div class="card-footer alert alert-secondary bg-light">
                                 <small class="text-muted">Last updated 3 mins ago</small>
