--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -50,28 +50,32 @@
         </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-scissors'" [label]="'Diseño de Modas'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/dise%C3%B1o-modas" >Ver Carrera</a>        </div>
+            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/dise%C3%B1o-modas">Ver Carrera</a>
+        </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-database'" [label]="'Desarrollo de Software'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/carrera-software" >Ver Carrera</a>        </div>
+            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/carrera-software">Ver Carrera</a>
+        </div>
     </div>
     <br>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-bolt'" [label]="'Electricidad'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/electricidad" >Ver Carrera</a>        </div>
+            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/electricidad">Ver Carrera</a>
+        </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-microchip'" [label]="'Electronica'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/electronica" >Ver Carrera</a>        </div>
+            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/electronica">Ver Carrera</a>
+        </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-street-view'" [label]="'Guianza Turistica'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/guianza-turistica" >Ver Carrera</a>        </div>
+            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/guianza-turistica">Ver Carrera</a>
+        </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-pie-chart'" [label]="'Marketing'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/marketing" >Ver Carrera</a>        </div>
+            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" href="http://localhost:4200/marketing">Ver Carrera</a>
+        </div>
     </div>
-    <hr />
-    <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" *ngFor="let alert of alerts">{{ alert.message }}</ngb-alert>
     <hr />
     <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" *ngFor="let alert of alerts">{{ alert.message }}</ngb-alert>
     <hr />
