--- a/client/src/app/CRUD/producto/producto.component.html
+++ b/client/src/app/CRUD/producto/producto.component.html
@@ -173,7 +173,7 @@
             <div class="col-sm-8">
               <select class="form-control" id="idPagina" name="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
                 <option value="" selected>Seleccione...</option>
-                <option *ngFor="let pagina of paginas" value={{pagina.id}}>{{pagina.descripcion}}</option>
+                <option *ngFor="let pagina of entidadesProductoPagina" value={{pagina.id}}>{{pagina.descripcion}}</option>
               </select>
             </div>
          </div>
