--- a/client/src/app/CRUD/noticia/noticia.component.html
+++ b/client/src/app/CRUD/noticia/noticia.component.html
@@ -38,6 +38,16 @@
             </th>
             <th scope="col">
               <span>
+                <strong>Titulo</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Fecha</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
                 <strong>Descripción</strong>
               </span>
             </th>
@@ -56,6 +66,7 @@
                 <strong>Es Público ?</strong>
               </span>
             </th>
+           
           </tr>
         </thead>
         <tbody>
@@ -64,10 +75,13 @@
               <i class="fa fa-hand-o-right" [hidden]="!estaSeleccionado(actual)"></i>
             </td>
             <td>{{actual.id}}</td>
+            <td>{{actual.titulo}}</td>
+            <td>{{actual.fecha}}</td>
             <td>{{actual.descripcion}}</td>
             <td>{{actual.idFoto}}</td>
             <td>{{actual.idPagina}}</td>
             <td>{{actual.esPublico}}</td>
+ 
           </tr>
         </tbody>
       </table>
@@ -117,6 +131,18 @@
           <label for="id" class="col-sm-4 col-form-label">Identificador</label>
           <div class="col-sm-8">
             <input type="text" readonly class="form-control" id="id" name="id" [(ngModel)]="entidadSeleccionada.id">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="titulo" class="col-sm-4 col-form-label">Titulo</label>
+          <div class="col-sm-8">
+            <input type="text" readonly class="form-control" id="titulo" name="titulo" [(ngModel)]="entidadSeleccionada.titulo">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="fecha" class="col-sm-4 col-form-label">Fecha</label>
+          <div class="col-sm-8">
+            <input type="date" readonly class="form-control" id="fecha" name="fecha" [(ngModel)]="entidadSeleccionada.fecha">
           </div>
         </div>
         <div class="form-group row">
