--- a/client/src/app/layout/noticias/noticias.component.html
+++ b/client/src/app/layout/noticias/noticias.component.html
@@ -11,19 +11,15 @@
                     {{actual.fecha}}
                     <br> {{actual.descripcion}}
                 </div>
-                <div class="col-lg-6">
+            </div>
 
+            <div class="row">
+                <div class="col-lg-6">
+                    aqui la foto {{actual.idFoto}}
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                aqui la foto
-                {{actual.idFoto}}
-            </div>
-            <div class="col-lg-6">
-                aqui la pagina
-                {{actual.idPagina}}
+                <div class="col-lg-6">
+                    aqui la pagina {{actual.idPagina}}
+                </div>
             </div>
         </div>
     </div>
